--- a/WS.Demo/WebSocketClient.html
+++ b/WS.Demo/WebSocketClient.html
@@ -1,29 +1,36 @@
 <html lang="zh-Hant-TW">
 <head>
     <title></title>
-<!--    <script src="./vue.js"></script>-->
+    <!--    <script src="./vue.js"></script>-->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.0/vue.min.js' integrity='sha512-ZjkdNWvVA3C4ZhiL2HoYnUVHB0cLCJwQl/YU5IXgmVSGSsLhpBg5rAIiltBeEpjjNcmxb2F4nePSh1O91J0FCg==' crossorigin='anonymous'></script>
 </head>
 <body>
 <div id="app">
     <h3>Chat</h3>
+
     <div>
+        <p> 請一次勾選一個人名，模擬某位使用者加入對話 </p>
         <input type="checkbox" id="chat1" value="art" v-model="checkedNames" v-on:change="joinChat">
         <label for="chat1">art</label>
         <input type="checkbox" id="chat2" value="mars" v-model="checkedNames" v-on:change="joinChat">
         <label for="chat2">mars</label>
         <input type="checkbox" id="chat3" value="cathy" v-model="checkedNames" v-on:change="joinChat">
         <label for="chat3">cathy</label>
+
+        <input type="text" value="" v-on:keypress.enter="sendMessage"/>
     </div>
 
     <h3>Chat</h3>
     <p>
         Status : {{ chatStatus }}<br/>
         Revice count : {{ chatCount }}<br/>
-        Revice Msg : <br/>
-        {{ chatMessage }}
     </p>
 
+    <ul>
+        <li v-for="message in chatMessage">
+            {{ message}}
+        </li>
+    </ul>
 
 </div>
 
@@ -34,13 +41,19 @@
             WS_Uri: 'ws://localhost:55688/',
             checkedNames: [],
             channels: {},
-            
+
             chatStatus: null,
-            chatCount:0,
-            chatMessage:null
+            chatCount: 0,
+            chatMessage: []
 
         },
         methods: {
+            sendMessage(evt) {
+                let username = Object.keys(this.channels)[0];
+                if (username===undefined) return
+                
+                this.channels[username].send(evt.target.value)
+            },
             joinChat(evt) {
                 const username = evt.target.value
 
@@ -50,7 +63,7 @@
                         this.channels[username].close()
                         this.channels[username] = null
                         this.chatStatus = 'Disconnected'
-                        this.chatMessage = `${username} 離開對話`
+                        // this.chatMessage.push(`${username} 離開對話`)
                     }
                 } else {
                     // 頻道不存在，則建立
@@ -64,7 +77,7 @@
                         //會話建立後事件
                         websocket.onopen = (evt) => {
                             this.chatStatus = 'Connected'
-
+                            this.chatMessage = []
                             if (!this.chatCount) this.chatCount = 0
 
                         };
@@ -75,7 +88,7 @@
                         //接收到訊息後事件
                         websocket.onmessage = (evt) => {
                             this.chatCount = this.chatCount + 1
-                            this.chatMessage = evt.data
+                            this.chatMessage.push(evt.data)
                         };
                         //發生錯誤後事件
                         websocket.onerror = (evt) => {
