調整Demo的網頁，可自行輸入人名加入Chat

--- a/WS.Demo/WebSocketClient.html
+++ b/WS.Demo/WebSocketClient.html
@@ -1,7 +1,6 @@
 <html lang="zh-Hant-TW">
 <head>
-    <title></title>
-    <!--    <script src="./vue.js"></script>-->
+    <title>WebSocket Client Demo</title>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.0/vue.min.js' integrity='sha512-ZjkdNWvVA3C4ZhiL2HoYnUVHB0cLCJwQl/YU5IXgmVSGSsLhpBg5rAIiltBeEpjjNcmxb2F4nePSh1O91J0FCg==' crossorigin='anonymous'></script>
 </head>
 <body>
@@ -9,18 +8,19 @@
     <h3>Chat</h3>
 
     <div>
-        <p> 請一次勾選一個人名，模擬某位使用者加入對話 </p>
-        <input type="checkbox" id="chat1" value="art" v-model="checkedNames" v-on:change="joinChat">
-        <label for="chat1">art</label>
-        <input type="checkbox" id="chat2" value="mars" v-model="checkedNames" v-on:change="joinChat">
-        <label for="chat2">mars</label>
-        <input type="checkbox" id="chat3" value="cathy" v-model="checkedNames" v-on:change="joinChat">
-        <label for="chat3">cathy</label>
-
-        <input type="text" value="" v-on:keypress.enter="sendMessage"/>
+        <p v-if="isJoinChannel">
+            <label>{{ currentUser }}：
+                <input v-model="words" v-on:keypress.enter="sendMessage"/>
+            </label>
+            <input type="button" value="Send" v-on:click="sendMessage">
+            <input type="button" value="Leave" v-on:click="leaveChat">
+        </p>
+        <p v-else>
+            <input v-model="user" placeholder="請輸入使用者名稱"/>
+            <input type="button" value="Join" v-on:click="joinChat">
+        </p>
     </div>
 
-    <h3>Chat</h3>
     <p>
         Status : {{ chatStatus }}<br/>
         Revice count : {{ chatCount }}<br/>
@@ -38,71 +38,64 @@
     new Vue({
         el: '#app',
         data: {
+            words: '',
+            user: 'demoUser',
+            currentUser: null,
             WS_Uri: 'ws://localhost:55688/',
-            checkedNames: [],
             channels: {},
-
             chatStatus: null,
             chatCount: 0,
-            chatMessage: []
-
+            chatMessage: [],
+        },
+        computed: {
+            isJoinChannel() {
+                return !!this.currentUser
+            }
         },
         methods: {
-            sendMessage(evt) {
-                let username = Object.keys(this.channels)[0];
-                if (username===undefined) return
-                
-                this.channels[username].send(evt.target.value)
+            sendMessage() {
+                if (!this.words) return
+                this.channels[this.currentUser].send(this.words)
+                this.words = null
             },
-            joinChat(evt) {
-                const username = evt.target.value
-
-                if (!this.checkedNames.includes(username)) {
-                    // 頻道存在，則移除
-                    if (this.channels[username]) {
-                        this.channels[username].close()
-                        this.channels[username] = null
-                        this.chatStatus = 'Disconnected'
-                        // this.chatMessage.push(`${username} 離開對話`)
-                    }
-                } else {
-                    // 頻道不存在，則建立
-                    if (!this.channels[username]) {
-                        let url = `${this.WS_Uri}Chat?name=${username}`
-                        console.log(`connect to ${url}`)
-
-                        let websocket = new WebSocket(url);
-                        websocket.binaryType = 'arraybuffer'
-
-                        //會話建立後事件
-                        websocket.onopen = (evt) => {
-                            this.chatStatus = 'Connected'
-                            this.chatMessage = []
-                            if (!this.chatCount) this.chatCount = 0
-
-                        };
-                        //會話結束後事件
-                        websocket.onclose = (evt) => {
-                            this.chatStatus = 'Disconnected'
-                        };
-                        //接收到訊息後事件
-                        websocket.onmessage = (evt) => {
-                            this.chatCount = this.chatCount + 1
-                            this.chatMessage.push(evt.data)
-                        };
-                        //發生錯誤後事件
-                        websocket.onerror = (evt) => {
-                            this.chatStatus = evt.data
-                        };
-
-                        this.channels[username] = websocket
-                    }
+            leaveChat() {
+                if (this.channels[this.currentUser]) {
+                    this.channels[this.currentUser].close()
+                    this.channels[this.currentUser] = null
+                    this.chatStatus = 'Disconnected'
+                    this.currentUser = null
                 }
+            },
+            joinChat() {
+                this.currentUser = this.user
 
+                let websocket = new WebSocket(`${this.WS_Uri}Chat?name=${(this.currentUser)}`);
+                websocket.binaryType = 'arraybuffer'
 
+                //會話建立後事件
+                websocket.onopen = (evt) => {
+                    this.chatStatus = 'Connected'
+                    this.chatMessage = []
+                    if (!this.chatCount) this.chatCount = 0
+
+                };
+                //會話結束後事件
+                websocket.onclose = (evt) => {
+                    this.chatStatus = 'Disconnected'
+                };
+                //接收到訊息後事件
+                websocket.onmessage = (evt) => {
+                    this.chatCount = this.chatCount + 1
+                    this.chatMessage.push(evt.data)
+                };
+                //發生錯誤後事件
+                websocket.onerror = (evt) => {
+                    this.chatStatus = evt.data
+                };
+
+                this.channels[this.currentUser] = websocket
             },
         }
-
     })
 </script>
 </body>
